--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -748,11 +748,11 @@ section {
   margin: 0;
   padding: 0;
 }
-.why-us .box:hover {
+/* .why-us .box:hover {
   background: #ffb03b;
   padding: 30px 30px 70px 30px;
   /* box-shadow: 20px 15px 30px #ffb03b; */
-}
+} */
 .why-us .box:hover span, .why-us .box:hover h4, .why-us .box:hover p {
   color: #fff;
 }
