--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -748,11 +748,6 @@ section {
   margin: 0;
   padding: 0;
 }
-/* .why-us .box:hover {
-  background: #ffb03b;
-  padding: 30px 30px 70px 30px;
-  /* box-shadow: 20px 15px 30px #ffb03b; */
-} */
 .why-us .box:hover span, .why-us .box:hover h4, .why-us .box:hover p {
   color: #fff;
 }
@@ -1244,6 +1239,9 @@ section {
 .contact .info-wrap {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   padding: 30px;
+}
+.contact h2{
+  margin-top: 100px;
 }
 .contact .info {
   background: #fff;
